  signature maybe with future tapatalk plugin update
  reputation maybe with future tapatalk plugin update
  Logo url from field in forum config data?
  Make a million dollars

Current Version : 0.9.29

*** 0.9.29 ***

Changed quote delimiters and removed italics
Nested quotes now alternate color infinitely
Skin mod install option now includes font modification 
Improved quote decorations

*** 0.9.28 ***

Fix bug when trying to view posts from other users on some forums (ie vwvortex)
Handle smilies
Change preview color on post editor to white/black for better visibility
Dialogs on add/remove favorites
Dialogs on add/remove forum
Dialogs on set/clear logins
Fixed some bugs when clearing passwords
Added option to add a current forum to online database
Fixed bug when adding forum with full URL
Added fanart.jpg (Just whipped this up. If someone wants to, please create something that is actually good :) )
Added option to automatically open thread subscriptions window
Added join date to posts view
Added post numbers to full screen message view
Hide post counts when no count available

*** 0.9.27 ***

Passwords now stored encrypted
Added unsubscribe from thread to context menu (now both subscribe and unsubscribe show in the context menu on the threads list and replies window)
Added secure icon for SSL connections
Added fallback to normal HTTP for forumrunner when SSL fails
Quotes within a quote are now green

*** 0.9.26 ***

Handling for nested quotes
Quotes are now colored
Selected thread text fixed to white in light skin
Lightened unread thread text slightly in dark skin
Fixed (I hope) responding to remote back button (for asking to exit)

*** 0.9.25 ***

Fixed posting from fullscreen message view
Added ability to save images in posts
Added option to ask if you really want to quit
Clear bold (unread) from threads when clicked

*** 0.9.24 ***

Fix for scraper forums failing to load definitions
Hide postcount display when no data available