@@ -1,0 +1,21 @@
+		<!-- Forum Browser Fonts Mod -->
+	 	<font>
+			<name>ForumBrowser-font10</name>
+			<filename>ForumBrowser-DejaVuSans.ttf</filename>
+			<size>18</size>
+		</font>
+	 	<font>
+			<name>ForumBrowser-font12</name>
+			<filename>ForumBrowser-DejaVuSans.ttf</filename>
+			<size>24</size>
+		</font>
+		<font>
+			<name>ForumBrowser-font13</name>
+			<filename>ForumBrowser-DejaVuSans.ttf</filename>
+			<size>30</size>
+		</font>
+		<font>
+			<name>ForumBrowser-font30</name>
+			<filename>ForumBrowser-DejaVuSans.ttf</filename>
+			<size>40</size>
+		</font>
