@@ -49,7 +49,7 @@
 				<posy>22</posy>
 				<width>100</width>
 				<height>40</height>
-				<font>font13_title</font>
+				<font>ForumBrowser-font13</font>
 				<textcolor>black</textcolor>
 				<aligny>center</aligny>
 				<align>center</align>
@@ -76,7 +76,7 @@
 				<width>135</width>
 				<height>40</height>
 				<visible>true</visible>
-				<font>font12</font>
+				<font>ForumBrowser-font12</font>
 				<align>center</align>
 				<aligny>center</aligny>
 				<label>$LOCALIZE[SCRIPT3002]</label>
@@ -92,7 +92,7 @@
 				<posy>14</posy>
 				<width>600</width>
 				<height>60</height>
-				<font>font13_title</font>
+				<font>ForumBrowser-font13</font>
 				<textcolor>black</textcolor>
 				<aligny>center</aligny>
 				<align>center</align>
@@ -123,7 +123,7 @@
 						<width>48</width>
 						<height>60</height>
 						<visible>true</visible>
-						<font>font12</font>
+						<font>ForumBrowser-font12</font>
 						<align>right</align>
 						<textcolor>white</textcolor>
 						<disabledcolor>20555555</disabledcolor>
@@ -141,7 +141,7 @@
 						<width>48</width>
 						<height>60</height>
 						<visible>true</visible>
-						<font>font12</font>
+						<font>ForumBrowser-font12</font>
 						<align>left</align>
 						<textcolor>white</textcolor>
 						<disabledcolor>20555555</disabledcolor>
@@ -158,7 +158,7 @@
 						<onright>106</onright>
 						<onup>120</onup>
 						<ondown>120</ondown>
-						<font>font12</font>
+						<font>ForumBrowser-font12</font>
 						<aligny>center</aligny>
 						<align>center</align>
 						<texturefocus border="20">forum-browser-dark-grey-boxr.png</texturefocus>
@@ -205,7 +205,7 @@
 					<onright>202</onright>
 					<onup>120</onup>
 					<ondown>120</ondown>
-					<font>font12</font>
+					<font>ForumBrowser-font12</font>
 					<textcolor>FF000000</textcolor>
 					<aligny>center</aligny>
 					<align>center</align>
@@ -339,7 +339,7 @@
 						<posy>8</posy>
 						<width>155</width>
 						<height>15</height>
-						<font>font18</font>
+						<font>ForumBrowser-font13</font>
 						<aligny>center</aligny>
 						<textcolor>white</textcolor>
 						<align>left</align>
@@ -537,7 +537,7 @@
 						<posy>8</posy>
 						<width>155</width>
 						<height>15</height>
-						<font>font18</font>
+						<font>ForumBrowser-font13</font>
 						<aligny>center</aligny>
 						<textcolor>white</textcolor>
 						<align>left</align>
