@@ -55,7 +55,7 @@
 				<posy>22</posy>
 				<width>150</width>
 				<height>40</height>
-				<font>font13_title</font>
+				<font>ForumBrowser-font13</font>
 				<textcolor>black</textcolor>
 				<aligny>center</aligny>
 				<align>center</align>
@@ -70,7 +70,7 @@
 				<posy>14</posy>
 				<width>680</width>
 				<height>60</height>
-				<font>font13_title</font>
+				<font>ForumBrowser-font13</font>
 				<textcolor>black</textcolor>
 				<aligny>center</aligny>
 				<align>center</align>
@@ -83,7 +83,7 @@
 				<posy>14</posy>
 				<width>330</width>
 				<height>60</height>
-				<font>font10</font>
+				<font>ForumBrowser-font10</font>
 				<textcolor>black</textcolor>
 				<aligny>center</aligny>
 				<align>right</align>
@@ -110,7 +110,7 @@
 					<posy>4</posy>
 					<width>400</width>
 					<height>10</height>
-					<font>font10</font>
+					<font>ForumBrowser-font10</font>
 					<textcolor>black</textcolor>
 					<aligny>top</aligny>
 					<align>right</align>
@@ -213,7 +213,7 @@
 						<posy>134</posy>
 						<width>130</width>
 						<height>30</height>
-						<font>font12</font>
+						<font>ForumBrowser-font12</font>
 						<aligny>center</aligny>
 						<textcolor>black</textcolor>
 						<selectedcolor>black</selectedcolor>
@@ -247,7 +247,7 @@
 						<posy>264</posy>
 						<width>130</width>
 						<height>30</height>
-						<font>font12</font>
+						<font>ForumBrowser-font12</font>
 						<aligny>center</aligny>
 						<textcolor>black</textcolor>
 						<selectedcolor>black</selectedcolor>
@@ -311,7 +311,7 @@
 						<posy>1</posy>
 						<width>421</width>
 						<height>58</height>
-						<font>font12</font>
+						<font>ForumBrowser-font12</font>
 						<aligny>center</aligny>
 						<textcolor>black</textcolor>
 						<selectedcolor>black</selectedcolor>
@@ -346,7 +346,7 @@
 						<posy>1</posy>
 						<width>375</width>
 						<height>78</height>
-						<font>font12</font>
+						<font>ForumBrowser-font12</font>
 						<aligny>center</aligny>
 						<textcolor>black</textcolor>
 						<selectedcolor>black</selectedcolor>
@@ -360,7 +360,7 @@
 						<posy>80</posy>
 						<width>375</width>
 						<height>30</height>
-						<font>font12</font>
+						<font>ForumBrowser-font12</font>
 						<aligny>center</aligny>
 						<textcolor>FF444444</textcolor>
 						<selectedcolor>black</selectedcolor>
